Improve intro without overflow and fix youtube icon

--- a/app/intro.module.scss
+++ b/app/intro.module.scss
@@ -265,9 +265,11 @@
     }
 
     .title {
-        font-size: clamp(1.4em, 5vw, 2.5em);
+        font-size: clamp(2.5em, 8vw, 4em);
         white-space: normal;
         height: 1.2em;
+        width: 100vw;
+        margin-left: -1em;
     }
 
     .subtitle {
