--- a/components/layout/Layout/layout.module.scss
+++ b/components/layout/Layout/layout.module.scss
@@ -424,6 +424,10 @@
     transition: fill 0.3s ease;
 }
 
+.socialiconContrast {
+    fill: var(--youtube-contrast-fill);
+}
+
 .social:hover .socialicon {
     fill: var(--social-icon-hover);
 }
